ECOPROJECT-5001 | feat: Multi-collection. Add inspector and vddk from v1
This commit adds the inspector and vddk services from v1 to v2.
The inspector is working with the latest collection.
